--- a/learn.html
+++ b/learn.html
@@ -43,20 +43,6 @@
         but.onclick=button;
         but.onclick=numb;
         function button(){
-            but.style.backgroundColor="#006BFF";
-        }
-        function numb(a,b){
-            a=3;
-            b=3;
-        }
-        var c=5;
-        var d=10;
-        if(c>=d){
-            alert("rrrr");
-        } else{
-            alert("ttttt");
-        }
-        
-        
+            but.style.backgroundColor=
     </script>
 </html>
