--- a/learn.html
+++ b/learn.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Page Title</title>
+
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
         <style type="text/css" media="all">
             body{
                 background-color: #ff2773;
