--- a/learn.html
+++ b/learn.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
         <style type="text/css" media="all">
             body{
-                background-color: #ff2773;
+                background-color: #ff00b6;
             }
             .one{
                 background-color: #009AFF;
