--- a/learn.html
+++ b/learn.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Page Title</title>
+     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
         <style type="text/css" media="all">
+    <head>
             body{
                 background-color: #ff2773;
             }
