--- a/learn.html
+++ b/learn.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
-     <meta charset="UTF-8">
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Page Title</title>
     <link rel="stylesheet" href="styles.css">
-        <style type="text/css" media="all">
+</head>
     <head>
+        <title>Page Title</title>
+        <style type="text/css" media="all">
             body{
                 background-color: #ff2773;
             }
